--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "team-api-server",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Imports and publishes updates to Team API data",
+  "bin": {
+    "team-api": "./bin/team-api"
+  },
   "engines": {
     "node": ">=0.12.7"
   },
