Only add gulp-jshint to package

--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "dependencies": {
     "file-locked-operation": "0.0.1",
     "hookshot": "18f/hookshot#0.1.0-with-json-options",
-    "lockfile": "^1.0.1",
-    "lodash": "^3.10.1"
+    "lockfile": "^1.0.1"
   }
 }
