Closes #2:  Automatically pull in data-private updates
This changeset adds support for pulling in updates from the data-private repo so that when we update the Team API site (team-api.18f.gov) we are retrieving the latest information.  This is important in the cases of when we have projects who do not have their own GitHub repo - the data-private repo is the only source to retrieve information about them.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mocha": "^2.2.5",
     "mock-spawn": "^0.2.6"
   },
+  "scripts": {
+    "test": "gulp test"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/18F/team-api.git"
