--- a/team-api-config.json
+++ b/team-api-config.json
@@ -1,9 +1,10 @@
 {
-  "branch":       "master",
-  "buildPort":    6000,
-  "updatePort":   6001,
-  "git":          "/usr/bin/git",
-  "ruby":         "/usr/local/rbenv/shims/ruby",
-  "workingDir":   "/home/ubuntu/team-api/",
-  "updateScript": "/home/ubuntu/team-api/scripts/projects/update_project_from_about_yml.rb"
+  "branch": "master",
+  "buildPort": 6000,
+  "updatePort": 6001,
+  "git": "/usr/local/bin/hub",
+  "ruby": "/Users/carlocostino/.rvm/rubies/ruby-2.2.3/bin/ruby",
+  "privateDataDir": "/Users/carlocostino/Projects/data-private",
+  "workingDir": "/Users/carlocostino/Projects/team-api.18f.gov",
+  "updateScript": "/Users/carlocostino/Projects/team-api.18f.gov/scripts/projects/update_project_from_about_yml.rb"
 }
