--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "data-private"]
-	path = data-private
+[submodule "_data/private"]
+	path = _data/private
 	url = git@github.com:18F/data-private.git
