bundle install before scripts, bundle exec script
This should solve issues where updates to the gem set result in `./go build`
failing.

--- a/team-api-config.json
+++ b/team-api-config.json
@@ -5,6 +5,7 @@
   "updatePort":   6001,
   "git":          "/usr/bin/git",
   "ruby":         "/usr/local/rbenv/shims/ruby",
+  "bundler":      "/usr/local/rbenv/shims/bundler",
   "workingDir":   "/usr/local/18f/team-api/team-api.18f.gov/",
   "updateScript": "/usr/local/18f/team-api/team-api.18f.gov/scripts/projects/update_project_from_about_yml.rb"
 }
