--- a/package.json
+++ b/package.json
@@ -1,42 +1,38 @@
 {
   "name": "team-api-server",
-  "version": "0.1.6",
+  "version": "0.2.0",
   "description": "Imports and publishes updates to Team API data",
-  "bin": {
-    "team-api": "./bin/team-api"
-  },
   "scripts": {
-    "test": "gulp test",
-    "lint": "gulp lint"
+    "start": "node index.js",
+    "test": "tape 'test/**/*.js'",
+    "dev-start": "nodemon index.js",
+    "dev-test": "nodemon -x 'tape test/*'"
   },
   "engines": {
-    "node": ">=0.12.7"
+    "node": "^5.10.0"
   },
   "devDependencies": {
-    "chai": "^3.2.0",
-    "chai-as-promised": "^5.1.0",
-    "chai-things": "^0.2.0",
-    "eslint": "^1.10.3",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^1.1.1",
-    "gulp-mocha": "^2.1.3",
-    "mocha": "^2.2.5",
-    "mock-spawn": "^0.2.6",
-    "temp": "^0.8.3"
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
+    "istanbul": "^0.4.3",
+    "nodemon": "^1.9.2",
+    "tape": "^4.5.1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/18F/team-api.git"
+    "url": "git+https://github.com/18F/team-api.18f.gov.git"
   },
   "author": "Mike Bland <michael.bland@gsa.gov>",
   "bugs": {
-    "url": "https://github.com/18F/team-api/issues"
+    "url": "https://github.com/18F/team-api.18f.gov/issues"
   },
   "homepage": "https://team-api.18f.gov/public/api/",
   "license": "CC0-1.0",
   "dependencies": {
-    "file-locked-operation": "1.0.0",
-    "hookshot": "18f/hookshot#0.1.0-with-json-options",
-    "lockfile": "^1.0.1"
+    "githooked": "^1.1.1",
+    "request-promise": "^3.0.0"
   }
 }
