--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "CC0-1.0",
   "dependencies": {
     "githooked": "^1.1.1",
-    "request-promise": "^3.0.0"
+    "request-promise": "^3.0.0",
+    "yaml-js": "^0.1.3"
   }
 }
