--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "tap test/*.js",
+    "lint": "eslint **/*.js; exit 0;",
     "dev-start": "nodemon index.js",
     "dev-test": "nodemon -x 'tap test/*.js'"
   },
