--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   "dependencies": {
     "dotenv": "^2.0.0",
     "githooked": "^1.1.1",
+    "js-yaml": "^3.6.1",
     "request-promise": "^3.0.0",
-    "winston": "^2.2.0",
-    "yaml-js": "^0.1.3"
+    "winston": "^2.2.0"
   }
 }
