--- a/.about.yml
+++ b/.about.yml
@@ -27,7 +27,7 @@ stage: live
 status: active
 
 # Description of the project
-description: Imports and publishes updates to Team API data
+description: Webhook handler that listens for changes on .about.yml files and pushes updates to a destination repo. 
 
 # Should be 'true' if the project has a continuous build (required)
 # values: true, false
@@ -39,23 +39,21 @@ testable: true
 #   id: Internal team identifier/user name
 #   role: Team member's role; leads should be designated as 'lead'
 team:
-- github: mbland
+- github: jseppi
   role: lead
-- github: arowla
+- github: toolness
 
 # Partners for whom the project is developed
 #partners:
-#- 
+#-
 
 # Brief descriptions of significant project developments
 #milestones:
-#- 
+#-
 
 # Technologies used to build the project
 stack:
 - Node.js
-- Ruby
-- git
 - GitHub
 
 # Brief description of the project's outcomes
@@ -68,7 +66,7 @@ stack:
 #   url: URL for detailed information
 #   badge: URL for the status badge
 #services:
-#- 
+#-
 
 # Licenses that apply to the project and/or its components (required)
 # Items by property name pattern:
@@ -82,7 +80,7 @@ licenses:
 
 # Blogs or websites associated with project development
 #blog:
-#- 
+#-
 
 # Links to project artifacts
 # Items:
@@ -96,7 +94,7 @@ links:
 
 # Email addresses of points-of-contact
 contact:
-- url: mailto:michael.bland@acm.org
-  text: Mike Bland
+- url: mailto:james.seppi@gsa.gov
+  text: James Seppi
 - url: https://github.com/18F/team-api-server/issues
   text: 18F/team-api-server issues
