--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "cfenv": "^1.0.3",
     "dotenv": "^2.0.0",
+    "eslint-plugin-scanjs-rules": "^0.1.4",
     "express": "^4.13.4",
     "githooked": "^1.1.1",
     "js-yaml": "^3.6.1",
