--- a/system-security-plan.yml
+++ b/system-security-plan.yml
@@ -1,6 +1,6 @@
 ---
 name: team-api-server
-uniqueID: <MB number – see https://docs.google.com/spreadsheets/d/1hjCYIskgD_x_MI1ehXoiz2Qvsyxj1yK3fxabkezMPiE/edit#gid=0>
+uniqueID:
 version: <application version>
 # descriptions:
 # https://18f.gsa.gov/dashboard/
