add tests for server routes

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mockery": "^1.7.0",
     "nodemon": "^1.9.2",
     "sinon": "^1.17.4",
+    "supertest": "^1.2.0",
     "tap": "^5.7.2",
     "tape": "^4.5.1"
   },
