--- a/system-security-plan.yml
+++ b/system-security-plan.yml
@@ -11,13 +11,13 @@ information-types:
 - D26 Civilian Operations
 
 # https://pages.18f.gov/before-you-ship/ato/levels/
-confidentiality: <none|low|moderate|high>
-integrity: <low|moderate|high>
-availability: <low|moderate|high>
-security-baseline: <open data|low|moderate|high>
+confidentiality: none
+integrity: low
+availability: low
+security-baseline: open data
 
-system-type: <major|minor|general support>
-level-of-identity-assurance: <0 if no authentication, or a link to SSP of the forthcoming identity system>
+system-type: minor
+level-of-identity-assurance: 0
 staff:
   authorizing-official:
     name: Aaron Snow
