--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.13.4",
     "githooked": "^1.1.1",
     "js-yaml": "^3.6.1",
+    "newrelic": "^1.28.0",
     "request-promise": "^3.0.0",
     "winston": "^2.2.0"
   }
